fix(popup): left/right center tooltips were misaligned

--- a/src/definitions/modules/popup.less
+++ b/src/definitions/modules/popup.less
@@ -189,6 +189,7 @@
   [data-tooltip][data-position="left center"]:hover:after,
   [data-tooltip][data-position="right center"]:hover:after {
     transform: translateY(-50%) scale(1) !important;
+    -moz-transform: translateY(-50%) scale(1.0001) !important;
   }
   [data-tooltip][data-position="top left"]:after,
   [data-tooltip][data-position="top right"]:after,
